# reposcribe

./: .gitignore  README.md  pyproject.toml
src/reposcribe/: cli.py  core.py
tests/: test_core.py
