[project]
name = "reposcribe"
version = "0.1.0"
description = "A tool to scribe a repository's files into a single context file"
authors = [{ name = "mikeusru", email = "mikeusru@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer[all] (>=0.15.2,<0.16.0)", "pathspec (>=0.12.1,<0.13.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
reposcribe = "reposcribe.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
